styles.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  height: 100vh;
  position: relative;
  font-family: "Figtree", sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  background-color: hsl(47, 88%, 63%);
}

#blog-card {
  max-width: 384px;
  width: 100%;
  padding: 25px;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  background-color: hsl(0, 0%, 100%);
  border: solid 1px hsl(0, 0%, 7%);
  border-radius: 20px;
  box-shadow: 10px 10px 0 hsl(0, 0%, 7%);
  display: flex;
  flex-direction: column;
  gap: 30px;
  transition: box-shadow 0.5s ease-in-out;
}

#blog-card:hover {
  box-shadow: 20px 20px 0 hsl(0, 0%, 7%);
  cursor: pointer;
}

#blog-card:hover #blog-title {
  color: hsl(47, 88%, 63%);
}

#blog-img {
  height: 100%;
  width: 100%;
  border-radius: 10px;
  min-height: 200px;
  object-fit: cover;
}

#blog-content {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

#blog-tag {
  background-color: hsl(47, 88%, 63%);
  display: block;
  padding: 5px 15px;
  width: fit-content;
  border-radius: 5px;
  font-weight: 800;
  font-size: 14px;
}

#blog-date {
  font-size: 14px;
  font-weight: 500;
}

#blog-title {
  font-size: 24px;
  font-weight: 800;
  color: hsl(0, 0%, 7%);
}

#blog-text {
  font-weight: 500;
  color: hsl(0, 0%, 50%);
  line-height: 1.5;
}

#blog-author {
  display: flex;
  gap: 15px;
  flex-direction: row;
  align-items: center;
}

#blog-author img {
  width: 32px;
  height: 32px;
}

#blog-author span {
  font-weight: 800;
  font-size: 14px;
}

/* mobile version */
@media (max-width: 375px) {
  #blog-card {
    max-width: 327px;
  }

  #blog-content {
    gap: 15px;
  }

  #blog-tag,
  #blog-date {
    font-size: 12px;
  }

  #blog-title {
    font-size: 20px;
  }
}

